# git-retrospector

./: .clinerules  .coverage  .envrc  .gitignore  .pre-commit-config.yaml  Makefile  PROMPT.md  README.md  command_output.txt  created-paths.json  get-retro-logs.sh  hatch_retults.txt  invoke-retrospector.sh  latest-test-results.txt  plan.md  play-text.py  pyproject.toml  response.json  retro.toml  task.md  test_results_summary.csv  test_temp.py  tts-reader.py
.trunk/: trunk.yaml
docs/: retro-tree-structure.md
docs/chats/: cline_task_apr-8-2025_11-06-59-am.md  cline_task_apr-8-2025_9-21-30-am.md  cline_task_apr-8-2025_9-49-43-am.md
fargate_task/: Dockerfile  process_single_commit_task.py  requirements.txt
iac/: app.py  requirements.txt  response.json
iac/iac/: iac_stack.py
iac/tests/unit/: test_iac_stack.py
lambda_fns/initiation/: handler.py  requirements.txt
lambda_layers/git/: Dockerfile
retros/example-remote/: retro.toml
retros/handterm/: config.toml  retro.toml
retros/test_retro/: retro.toml
retros/test_retro_instance/: retro.toml
retros/test_retro_tree/: retro.toml
retros/test_target/: config.toml  retro.toml
retros/urllog/: retro.toml
src/git_retrospector/: commit_processor.py  config.py  diff_generator.py  diff_utils.py  git_utils.py  parser.py  retro.py  retrospector.py  run_tests.py  runners.py  xml_processor.py
src/git_retrospector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/git_test_retrospector/: parser.py  retrospector.py
src/git_test_retrospector.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
temp/: test_output.txt
tests/: TestConfig.py  test_create_issues.py  test_diff_utils.py  test_git_utils.py  test_initialize.py  test_parse_commit_results.py  test_parser.py  test_process_commit.py  test_process_csv.py  test_retro.py  test_retro_processor.py  test_retrospector.py  test_retrospector_cli.py  test_xml_processor.py
tools/work-estimator/: MIGRATION.md  Makefile  README.md  full_prompt.txt  llm_prompt.txt  work_analysis.json  work_prompt.txt
tools/work-estimator/responses/: 2025-10-01-12-00-00-init.md  20251001_client_summary.md
tools/work-estimator/src/: analyze_work.py
tools/work-estimator/templates/: client_profile.md  product_summary.md  value_propositions.md
