[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git_retrospector"
version = "0.1.0"
description = "A tool to run tests on a range of Git commits and analyze the results."
authors = [{name = "mstouffer", email = "m.ztouffer@gmail.com"}]
requires-python = ">=3.7"
dependencies = [
    "pydantic",
    "argparse",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "C", "T", "B"]
ignore = ["I001"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
