[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git_retrospector"
version = "0.1.0"
description = "A tool to run tests on a range of Git commits and analyze the results."
authors = [{name = "mstouffer", email = "m.ztouffer@gmail.com"}]
requires-python = ">=3.7"
dependencies = [
    "pydantic",
    "argparse",
    "toml",
    "PyGithub",
    "click",
    "prompt_toolkit"
]

[tool.hatch.envs.default]
[tool.hatch.envs.default.scripts]
test = "python3 -m unittest discover -s tests"
test-cov = "coverage run -m unittest discover -s tests && coverage report"
test-save = "python3 -m unittest discover -s tests > latest-test-results.txt 2>&1"
test-cov-save = "coverage run -m unittest discover -s tests > latest-test-results.txt 2>&1"
handterm = "rm -rf retros/handterm/test-output && python src/git_retrospector/retrospector.py run handterm -i {args} && tree retros/handterm"
example-remote = "rm -rf /home/mstouffer/repos/handterm-proj/handterm/retros/example-remote/test-output;python src/git_retrospector/retrospector.py run example-remote -i {args} > latest-test-results.txt 2>&1"

[[tool.hatch.envs.default.matrix]]
python = ["3.12"]

[tool.hatch.envs.handterm]
type = "virtual"
path = ".venv"
python = "3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "C", "T", "B"]
ignore = ["I001"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
